# voicemeeter-compact

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  INSTALLATION.md  INST_PYTHON.md  PYTHON.md  README.md  Taskfile.azure.yml  Taskfile.dynamic.yml  Taskfile.forest.yml  Taskfile.sunvalley.yml  Taskfile.yml  __main__.py  build.ps1  pyproject.toml  scripts.py  setup.py
.github/workflows/: publish.yml  release.yml  ruff.yml
configs/: app.toml  vban.toml
configs/banana/: example.toml
configs/basic/: example.toml
configs/potato/: example.toml
profiles/banana/: example.toml
profiles/basic/: example.toml
profiles/potato/: example.toml
tools/: dynamic_builder.py  rewriter.py  spec_generator.py
vmcompact/: __init__.py  app.py  banner.py  builders.py  channels.py  config.py  configurations.py  data.py  errors.py  gainlayer.py  menu.py  navigation.py  subject.py  util.py
vmcompact/configs/: app.toml
vmcompact/gui/banana/: main.py
vmcompact/gui/basic/: main.py
vmcompact/gui/potato/: main.py
