[tool.poetry]
name = "voicemeeter-compact"
version = "1.9.4"
description = "A Compact Voicemeeter Remote App"
authors = ["onyx-and-iris <code@onyxandiris.online>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/onyx-and-iris/voicemeeter-compact"

packages = [{ include = "vmcompact" }]
include = ["vmcompact/img/cat.ico"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
sv-ttk = "^2.6.0"
tomli = { version = "^2.0.1", python = "<3.11" }
voicemeeter-api = "^2.6.0"
vban-cmd = "^2.4.11"

[tool.poetry.group.dev.dependencies]
black = { version = ">=22.6,<25.0", allow-prereleases = true }
isort = "^5.12.0"


[tool.poetry.group.build.dependencies]
pyinstaller = "^6.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build_sunvalley = "scripts:build_sunvalley"
build_forest = "scripts:build_forest"
build_all = "scripts:build_all"
